--- a/style/main.css
+++ b/style/main.css
@@ -578,6 +578,7 @@ hr {
   color: #f9f6f2;
   background: #edcf72;
   font-size: 45px;
+  box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
 }
 @media screen and (max-width: 520px) {
   .tile.tile-128 .cube-face {
@@ -588,6 +589,7 @@ hr {
   color: #f9f6f2;
   background: #edcc61;
   font-size: 45px;
+  box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
 }
 @media screen and (max-width: 520px) {
   .tile.tile-256 .cube-face {
@@ -598,6 +600,7 @@ hr {
   color: #f9f6f2;
   background: #edc850;
   font-size: 45px;
+  box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
 }
 @media screen and (max-width: 520px) {
   .tile.tile-512 .cube-face {
@@ -608,6 +611,7 @@ hr {
   color: #f9f6f2;
   background: #edc53f;
   font-size: 28px;
+  box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
 }
 @media screen and (max-width: 520px) {
   .tile.tile-1024 .cube-face {
@@ -618,6 +622,7 @@ hr {
   color: #f9f6f2;
   background: #edc22e;
   font-size: 28px;
+  box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
 }
 @media screen and (max-width: 520px) {
   .tile.tile-2048 .cube-face {
